@@ -119,6 +119,7 @@ Serge Munhoven		   munhoven@mema.ucl.ac.be
 Simon Josefsson            jas@extundo.com
 SL Baur 		   steve@xemacs.org
 Stephan Austermuehle       au@hcsd.de
+Stephan Müller             smueller at atsec com
 Stephane Corthesy          stephane@sente.ch
 Stefan Karrmann 	   S.Karrmann@gmx.net
 Stefan Keller		   dres@cs.tu-berlin.de
