@@ -1,5 +1,7 @@
 2009-01-22  Werner Koch  <wk@g10code.com>
 
+	* cavs_tests.sh: Pass option -D to driver if required.
+
 	* fipsdrv.c (run_dsa_sign): Use hash of the data.
 	(dsa_gen_with_seed): New.
 	(run_dsa_pqg_gen): Add args SEED and SEEDLEN and use them.
